добавлена обработка транзакций при создании блоков